--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
+* {
+  margin: 0;
+}
+
 .App {
-  text-align: center;
+  display: grid;
+  place-items: center;
+  width: 100%;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
+.Header {
+  padding: 20px;
+  background-color: #20232a;
   color: #61dafb;
+  width: inherit;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Header p {
+  margin-left: 20px;
+}
+
+.Main {
+  margin-top: 20px;
+}
+
+.Main label {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.Main textarea {
+  width: 300px;
+  height: 70px;
+  margin-top: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.Main input {
+  margin-left: 10px;
+  width: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.Main button {
+  margin-top: 30px;
+  width: 300px;
+  height: 30px;
+  border: 0;
+  background-color: #62dafb;
+}
+
+.Main button:hover {
+  cursor: pointer;
+  background-color: #20232a;
+  color: #f2ffde;
+}
+
+.Error {
+  color: red;
+  font-size: 12px;
 }
